# mobile_robots

jackal/jackal_description/: CMakeLists.txt  package.xml
jackal/jackal_description/config/: bridge.yaml  ekf.yaml  ros2_control.yaml
jackal/jackal_description/launch/: jackal.launch.py  jackal_ekf_launch.py  jackal_gazebo_launch.py  jackal_ros2_control_launch.py  jackal_world_launch.py
jackal/jackal_description/rviz/: jackal.rviz
jackal/jackal_description/src/: TwistRemap.cpp
jackal/jackal_description/urdf/: jackal.urdf.xacro  jackal_macro.urdf.xacro  macros.urdf.xacro
jackal/jackal_description/urdf/accessories/camera/: camera_mount.urdf.xacro
jackal/jackal_description/urdf/accessories/camera/D435/: _d435.urdf.xacro  _usb_plug.urdf.xacro
jackal/jackal_description/urdf/accessories/gen3lite/: gen3_lite.urdf.xacro
jackal/jackal_description/urdf/accessories/lidar/: OS1-32.urdf.xacro
jackal/jackal_description/urdf/gz/: jackal.gazebo.xacro
jackal/jackal_description/urdf/ros2_control/: jackal_ros2_control.urdf.xacro
jackal/jackal_description/worlds/: empty.sdf
jackal/jackal_navigation/: CMakeLists.txt  package.xml
jackal/jackal_navigation/config/: nav2_params.yaml  slam.yaml  slam_parameters.yaml
jackal/jackal_navigation/launch/: jackal_navigation.launch.py  jackal_slam.launch.py
jackal/jackal_navigation/rviz/: jackal_nav.rviz  jackal_slam.rviz
